@@ -1,3 +1,8 @@
+* 2007-10-29 - thorben.betten@open-xchange.com
+
+ - Bugfix #9957: Fixed error message on exceeded quota when placing a copy
+   into sent folder during message transport
+
 * 2007-10-26 - thorben.betten@open-xchange.com
 
  - Bugfix #9980: Proper check for table 'version'
